--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container">
     <h1>Delete Account Request</h1>
     <p>Please fill out the form below to request the deletion of your account.</p>
-    <form action="https://formspree.io/devsphere.apps@gmail.com" method="POST">
+    <form action="https://formspree.io/f/mkgwlpzl" method="POST">
       <input type="email" name="email" placeholder="Your email address" required>
       <textarea name="reason" placeholder="Reason for deletion (optional)" rows="4"></textarea>
       <button type="submit">Submit Request</button>
